- Added return false on buttons click to avoid the screen to jump to the top of the page - Mp4 has now a default length of 15s and the textbox is invisible - Permanent address, short address & embed are invisible on mobile devices - Share button is displayed on mobile devices

--- a/css/player.css
+++ b/css/player.css
@@ -136,7 +136,7 @@
 
 
 @media (max-width: 600px) {
-    .btn-area > .btn-info, .btn-area > .btn-fullScreen, .btn-area .credit, .btn-area .btn-share, .player-sharing { display: none!important; }
+    .btn-area > .btn-info, .btn-area > .btn-fullScreen, .btn-area .credit/*, .btn-area .btn-share, .player-sharing*/, #permanentAddress, #shortAddress, #embed-options-panel { display: none!important; }
     .player-controls {display: none;}
 }
 
@@ -146,7 +146,7 @@
     height: 540px; 
 }
 
-#canvas-wrapper canvas {
+#canvas, #watermark {
     position: absolute;
     top: 0;
     left: 0;
